--- a/src/Senparc.Web/Senparc.Web.csproj
+++ b/src/Senparc.Web/Senparc.Web.csproj
@@ -9,6 +9,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Jenkinsfile" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Include="Jenkinsfile" />
+  </ItemGroup>
+
+  <ItemGroup>
     <!--https://docs.microsoft.com/en-us/aspnet/core/mvc/views/view-compilation?view=aspnetcore-3.1-->
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="3.1.2" />
 
