--- a/src/Senparc.Web/App_Data/DataBase/SenparcConfig.config
+++ b/src/Senparc.Web/App_Data/DataBase/SenparcConfig.config
@@ -16,7 +16,7 @@
   </SenparcConfig>
   <SenparcConfig>
     <Id>2</Id>
-    <Name>Local</Name>
+    <Name>LocalOld</Name>
     <Host><![CDATA[.\]]></Host>
     <DataBase><![CDATA[SCF]]></DataBase>
     <UserName><![CDATA[sa]]></UserName>
@@ -26,6 +26,20 @@
 
     <!--本地数据库-->
     <ConnectionStringFull><![CDATA[Server=.\;Database=SCF; initial catalog=SCF;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework]]></ConnectionStringFull>
+    <ApplicationPath><![CDATA[/]]></ApplicationPath>
+  </SenparcConfig>
+  <SenparcConfig>
+    <Id>3</Id>
+    <Name>Local</Name>
+    <Host><![CDATA[.\]]></Host>
+    <DataBase><![CDATA[SCF]]></DataBase>
+    <UserName><![CDATA[sa]]></UserName>
+    <Password><![CDATA[123]]></Password>
+    <Provider><![CDATA[System.Data.SqlClient]]></Provider>
+    <ConnectionString><![CDATA[server=119.45.49.31;user id=root;pwd=20e1d944ca2c6e79;database=SCF;]]></ConnectionString>
+
+    <!--本地数据库-->
+    <ConnectionStringFull><![CDATA[server=119.45.49.31;user id=root;pwd=20e1d944ca2c6e79;database=SCF;]]></ConnectionStringFull>
     <ApplicationPath><![CDATA[/]]></ApplicationPath>
   </SenparcConfig>
 </SenparcConfigs>
